homomorphic_evaluation/ntl-11.3.2/src/CheckFeatures.log
*** CheckFeatures log ***
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native -o TestGetTime TestGetTime.cpp GetTime1.cpp -lm
running
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native -o TestGetPID TestGetPID.cpp GetPID1.cpp -lm
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckALIGNED_ARRAY.cpp -o CheckFeatures -lm
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckBUILTIN_CLZL.cpp -o CheckFeatures -lm
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckLL_TYPE.cpp -o CheckFeatures -lm
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckSSSE3.cpp -o CheckFeatures -lm
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckAVX.cpp -o CheckFeatures -lm
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckPCLMUL.cpp -o CheckFeatures -lm
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckAVX2.cpp -o CheckFeatures -lm
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckFMA.cpp -o CheckFeatures -lm
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckAVX512F.cpp -o CheckFeatures -lm
CheckAVX512F.cpp:16:2: error: #error "AVX512F not supported"
 #error "AVX512F not supported"
  ^
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckCOPY_TRAITS1.cpp -o CheckFeatures -lm
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckCOPY_TRAITS2.cpp -o CheckFeatures -lm
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckCHRONO_TIME.cpp -o CheckFeatures -lm
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckMACOS_TIME.cpp -o CheckFeatures -lm
CheckMACOS_TIME.cpp: In function ‘int main()’:
CheckMACOS_TIME.cpp:26:33: error: ‘_ntl_GetWallTime’ was not declared in this scope
    double t = _ntl_GetWallTime( );
                                 ^
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckPOSIX_TIME.cpp -o CheckFeatures -lm
